Fixed a problem that a vertical scrollbar shows up initially when using an iframe.

--- a/css/defaultUI.css
+++ b/css/defaultUI.css
@@ -1111,3 +1111,7 @@ input::-ms-clear {
   width : 0;
   height: 0;
 }
+
+.shareView {
+  display: none;
+}
